# blobyard-core

./: .blobyard-extraction-provenance.json  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .jscpd.json  .prettierignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  VISION.md  clippy.toml  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/blobyard-api-client/: Cargo.toml
crates/blobyard-api-client/src/: client.rs  config.rs  endpoint.rs  endpoint_availability.rs  endpoint_routes.rs  endpoint_tests.rs  lib.rs  protocol.rs  transport.rs
crates/blobyard-api-client/tests/: client.rs  config.rs  endpoint_inventory.rs  non_transfer_protocol.rs  protocol.rs  transport.rs  yard_protocol.rs
crates/blobyard-cli/: Cargo.toml
crates/blobyard-cli/src/: account_commands.rs  application.rs  application_tests.rs  args.rs  billing_commands.rs  commands.rs  completion.rs  config.rs  config_file.rs  config_profile.rs  config_profile_write.rs  config_profile_write_failure_tests.rs  config_resolution.rs  config_source.rs  config_tests.rs  config_values.rs  config_yards.rs  headless_commands.rs  lib.rs  main.rs  output.rs  profile_add.rs  profile_add_edge_tests.rs  profile_add_test_support.rs  profile_add_tests.rs  runner_cases_tests.rs  token_store.rs  token_store_tests.rs
crates/blobyard-cli/tests/: application_seams.rs  config.rs  grammar.rs  openapi_parity.rs  output.rs  process.rs
crates/blobyard-core/: Cargo.toml
crates/blobyard-core/src/: encoding.rs  error.rs  lib.rs  secret.rs  slug.rs  uri.rs  web_yard_origin.rs
crates/blobyard-core/tests/: error.rs  formatting.rs  uri.rs  value_types.rs
crates/blobyard-mcp/: Cargo.toml  README.md
crates/blobyard-mcp/src/: admin_call.rs  admin_call_confirmation_tests.rs  admin_call_tests.rs  admin_catalog.rs  catalog.rs  catalog_contracts.rs  context.rs  dashboard_call.rs  dashboard_call_tests.rs  dashboard_catalog.rs  lib.rs  openapi_operations.generated.rs  protocol.rs  protocol_admin_tests.rs  protocol_error_tests.rs  protocol_result_tests.rs  protocol_tests.rs  protocol_yard_tests.rs  sanitize.rs  server.rs  tool_call.rs  tool_call_error_tests.rs  tool_call_tests.rs  transport_failure_tests.rs  yard_call.rs
crates/blobyard-repository-sqlite/: Cargo.toml
crates/blobyard-repository-sqlite/migrations/: 0001_initial.sql  0002_local_auth.sql  0003_transfers.sql  0004_downloads.sql  0005_object_lifecycle.sql  0006_api_token_lifecycle.sql  0007_object_provenance.sql  0008_cli_sessions.sql  0009_ci_oidc.sql  0010_multipart_uploads.sql  0011_shares.sql  0012_inboxes.sql  0013_previews.sql  0014_web_yards.sql  0015_multipart_provider_tags.sql  0016_yard_cleanup.sql
crates/blobyard-repository-sqlite/src/: adapter.rs  adapter_behavior_tests.rs  adapter_failure_map_tests.rs  adapter_invalid_tests.rs  adapter_migration_tests.rs  adapter_multipart_tests.rs  adapter_query_tests.rs  adapter_state_tests.rs  adapter_tests.rs  adapter_token_fixtures.rs  adapter_token_tests.rs  adapter_transfer_behavior_tests.rs  adapter_workspace_tests.rs  auth.rs  auth_machine.rs  auth_tests.rs  auth_validation.rs  ci.rs  ci_boundary_tests.rs  ci_failure_tests.rs  ci_match.rs  ci_records.rs  ci_test_fixtures.rs  ci_tests.rs  ci_validation.rs  inbox_queries.rs  inbox_queries_tests.rs  inbox_rates.rs  inbox_rates_tests.rs  inbox_uploads.rs  inbox_uploads_tests.rs  inboxes.rs  inboxes_tests.rs  inventory.rs  inventory_tests.rs  lib.rs  lifecycle.rs  lifecycle_audit.rs  lifecycle_deletion.rs  lifecycle_deletion_tests.rs  (+40 more)
crates/blobyard-repository-sqlite/tests/: conformance.rs  conformance_failures.rs  lifecycle_audit.rs  lifecycle_deletion.rs  lifecycle_retention.rs  lifecycle_retention_validation.rs  repository_edges.rs  yard_cleanup_edges.rs
crates/blobyard-server/: Cargo.toml
crates/blobyard-server/assets/: inbox-upload.js
crates/blobyard-server/src/: api.rs  api_bootstrap.rs  api_bootstrap_tests.rs  api_ci_exchange.rs  api_ci_exchange_limit_tests.rs  api_ci_exchange_seams.rs  api_ci_exchange_tests.rs  api_ci_trusts.rs  api_ci_trusts_seams.rs  api_ci_trusts_tests.rs  api_cli_sessions.rs  api_cli_sessions_tests.rs  api_contract_tests.rs  api_credential_revoke.rs  api_query.rs  api_tests.rs  api_tokens.rs  api_tokens_http_tests.rs  api_tokens_tests.rs  api_workspace_rename.rs  api_workspace_rename_tests.rs  application.rs  application_contract_tests.rs  application_output.rs  application_retention.rs  application_seams.rs  application_tests.rs  audit.rs  audit_seams.rs  audit_tests.rs  auth.rs  auth_machine_session_tests.rs  auth_seams.rs  auth_tests.rs  contract_test_support.rs  download_io.rs  download_io_contract_tests.rs  download_io_tests.rs  error.rs  error_tests.rs  (+125 more)
crates/blobyard-server/tests/: api_seams.rs  application_failures.rs  application_seams.rs  clock_seams.rs  download_io_seams.rs  hosted_migration.rs  http.rs  lifecycle_command.rs  lifecycle_command_failures.rs  objects_seams.rs  oidc_verifier.rs  transfers_seams.rs
crates/blobyard-storage-filesystem/: Cargo.toml
crates/blobyard-storage-filesystem/src/: filesystem.rs  filesystem_seams.rs  filesystem_tests.rs  inventory.rs  inventory_tests.rs  io_contract_tests.rs  lib.rs  multipart.rs  multipart_tests.rs  paths.rs  paths_tests.rs
crates/blobyard-storage-filesystem/tests/: conformance.rs  conformance_failures.rs  filesystem_edges.rs  io_seams.rs
crates/blobyard-storage-s3/: Cargo.toml
crates/blobyard-storage-s3/examples/: minio_acceptance.rs
crates/blobyard-storage-s3/src/: client.rs  client_inventory.rs  client_multipart.rs  client_objects.rs  config.rs  error.rs  inventory.rs  lib.rs  locator.rs  metadata.rs  multipart.rs  objects.rs  replay.rs  runtime.rs  signing.rs  staging.rs  tests.rs  transport.rs  xml.rs
crates/blobyard-testkit/: Cargo.toml
crates/blobyard-testkit/src/: ci.rs  credentials.rs  fault_forwarders.rs  lib.rs  lifecycle.rs  repository.rs  repository_events.rs  repository_fixtures.rs  repository_inboxes.rs  repository_multipart.rs  storage.rs  (+7 more)
(+364 files in other folders)
