[package]
name = "blobyard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
percent-encoding.workspace = true
serde.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
