[package]
name = "blobyard-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std"] }

[dev-dependencies]
blobyard-api-client = { path = "../blobyard-api-client" }
tokio.workspace = true

[lints]
workspace = true
