[package]
name = "blobyard-storage-filesystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
test-seams = []

[dependencies]
blobyard-contract = { path = "../blobyard-contract" }
blobyard-core = { path = "../blobyard-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
uuid.workspace = true

[dev-dependencies]
blobyard-testkit = { path = "../blobyard-testkit" }

[lints]
workspace = true
