[package]
name = "blobyard-storage-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
test-seams = []

[dependencies]
base64.workspace = true
blobyard-contract = { path = "../blobyard-contract" }
blobyard-core = { path = "../blobyard-core" }
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
blobyard-testkit = { path = "../blobyard-testkit" }

[lints]
workspace = true
