[package]
name = "blobyard-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
blobyard-contract = { path = "../blobyard-contract" }
blobyard-core = { path = "../blobyard-core" }

[lints]
workspace = true
